--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,9 @@
     "express": "^5.2.1",
     "express-session": "^1.19.0",
     "mongodb": "^7.1.0",
-    "mongoose": "^9.2.1"
+    "mongoose": "^9.2.1",
+    "multer": "^2.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
